--- a/src/_data/sitemap.yml
+++ b/src/_data/sitemap.yml
@@ -46,4 +46,15 @@
       text_layout: 'top right'
       close_btn_layout: 'left'
       body: |
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio repellat, nihil fuga provident ab delectus ex hic odit, eum ipsam a commodi impedit omnis fugiat maxime at necessitatibus, quasi eligendi!
+        Monday - Friday
+        8.30am - 5.15pm
+
+        274 Angas Street
+        Adelaide SA 5000
+
+        T +61 8 8223 5688
+        F +61 8 8223 5662
+        E taxadvice@dbco.com.au
+
+        ABN
+        13 128 882 628
