--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "liquidvisual-boilerplate",
+  "name": "dbc-0315",
   "version": "0.0.1",
   "dependencies": {
     "animate.css": "3.1.1",
