--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "liquidvisual-jekyll-boilerplate",
+  "name": "dbc-0315",
   "private": true,
   "version": "0.0.0",
   "description": "Built on the Jekyllrb Yeoman Generator",
@@ -24,7 +24,7 @@
     "grunt-filerev": "~0.2.0",
     "grunt-jekyll": "~0.4.1",
     "grunt-pixrem": "^0.1.2",
-    "grunt-sass": "^0.17.0",
+    "grunt-sass": "^1.0.0",
     "grunt-svgmin": "~0.3.0",
     "grunt-usemin": "~2.6.0",
     "jit-grunt": "^0.8.0",
