--- a/src/_data/settings.yml
+++ b/src/_data/settings.yml
@@ -1,10 +1,10 @@
 # GLOBAL SITE SETTINGS
 
 # General
-seo_title: "DB + Co: Dennis Ballestring and Co - Expert Advice + Personal Service"
-title: "DB + Co"
-company: "DB + Co"
-description: "DB&Co is an experienced and trusted chartered accountancy firm located in the heart of Adelaide's Central Business District."
+seo_title: "DB+Co: Dennis Ballestrin and Co - Expert Advice + Personal Service, Adelaide CBD"
+title: "DB+Co"
+company: "DB+Co"
+description: "DB+Co is an experienced and trusted chartered accountancy firm located in the heart of Adelaide's Central Business District."
 
 # Contact Info
 email: taxadvice@dbco.com.au
